# timetable_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: data.py  main.py  settings.py  setup.py
app/client/: api.py  formatter.py  parser.py  serialize.py
app/db/: __init__.py  base.py  group.py  user.py
app/filters/: default.py
app/fsm/: default.py
app/handlers/: about.py  admin.py  feedback.py  group.py  help.py  menu.py  private.py  settings.py  start.py  timetable.py
app/keyboards/: kb.py
app/notify/: scheduler.py
